src/objects/edynamics__ArchiveForChatter__c.object
<CustomObject>
    <description>Repository for Chatter posts and comments</description>
    <fields>
        <fullName>edynamics__Body__c</fullName>
        <label>Body</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>edynamics__CommentCount__c</fullName>
        <label>CommentCount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>edynamics__CommentLinkedToFeedId__c</fullName>
        <label>CommentLinkedToFeedId</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>edynamics__ContentDescription__c</fullName>
        <label>ContentDescription</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>edynamics__ContentFileName__c</fullName>
        <label>ContentFileName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>edynamics__ContentSize__c</fullName>
        <label>ContentSize</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>edynamics__ContentType__c</fullName>
        <label>ContentType</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>edynamics__Feedid__c</fullName>
        <label>Feedid</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>edynamics__IBD__c</fullName>
        <label>IBD</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>edynamics__InsertedByDate__c</fullName>
        <label>InsertedByDate</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>edynamics__InsertedById__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>InsertedById</label>
        <referenceTo>User</referenceTo>
        <relationshipName>ArchiveForChatter</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>edynamics__IsDeleted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsDeleted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>edynamics__LikeCount__c</fullName>
        <label>LikeCount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>edynamics__LinkUrl__c</fullName>
        <label>LinkUrl</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>edynamics__ParentID_NoUrl__c</fullName>
        <label>ParentID_NoUrl</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>edynamics__ParentID__c</fullName>
        <label>ParentID</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>edynamics__ParentName__c</fullName>
        <label>ParentName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>edynamics__ParentType__c</fullName>
        <label>ParentType</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>edynamics__Title__c</fullName>
        <label>Title</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>edynamics__Type__c</fullName>
        <label>Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>ArchiveForChatter</label>
    <nameField>
        <label>ArchiveForChatter Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ArchiveForChatter</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>